Synchronize `java` arguments in cbt.bat